# genai-llm-experiments

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
nb/: anthropic-citations.ipynb  deep_research_experiment.ipynb  deep_research_o3_gpt41.ipynb  gemini_tests.ipynb  openai-agents-framework-experiments.ipynb  openai-response-api-experiments.ipynb  social_media_agentic_team.ipynb  temp-demo.ipynb  test.ipynb
nb/ambient_experiment/: slack_tools.py  stock_data_generator.py  test_tools.ipynb  utils.py
nb/ambient_experiment/stock_data/: flush_snapshots.py  stock_data_generator.py  stock_data_generator_final.py
nb/computer_use_utils/: base_playwright.py  local_playwright.py
nb/flights/: flights.ipynb
nb/flights/utils/: ai.py  prompts.py  tools.py  utils.py
nb/holtankoljak/: all_stations.json  stations_analyzer.ipynb  stations_scraper.ipynb
output/: research_experiment_Should_I_buy_a_2yo_used_Tesla_Model_3_20250119_223729.md
output/agents_sdk_experiments/: deep_research_report_o3_X_gpt41_n8n_research.md
output/anthropic-citations/: response_with_citations-json.json  response_with_citations-txt.txt  tesla-wiki.txt
output/research_experiment/: Do_I_invest_in_Bitcoin_20250119_223729.md  The_GOAT_of_the_NFL_20250119_223729.md
utils/: generate_requirements.py  llm.py
