[project]
name = "genai-llm-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anthropic==0.45.0",
    "anyio==4.8.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "attrs==24.3.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.2.0",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "distro==1.9.0",
    "executing==2.2.0",
    "fast-flights==2.2",
    "fastjsonschema==2.21.1",
    "fonttools==4.56.0",
    "frozenlist==1.5.0",
    "graphviz==0.20.3",
    "greenlet==3.1.1",
    "griffe==1.6.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "iniconfig==2.0.0",
    "ipykernel==6.29.5",
    "ipython==9.1.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.8.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.8",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-core==0.2.43",
    "langchain-openai==0.1.23",
    "langchain-text-splitters==0.2.4",
    "langgraph==0.2.18",
    "langgraph-checkpoint==1.0.12",
    "langsmith==0.1.114",
    "marshmallow==3.25.1",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mcp==1.9.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "mypy-extensions==1.0.0",
    "narwhals==1.35.0",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "numpy==1.26.4",
    "openai==1.79.0",
    "openai-agents==0.0.15",
    "orjson==3.10.15",
    "packaging>=23.2,<25",
    "pandas==2.2.3",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.7",
    "playwright==1.50.0",
    "plotly==6.0.1",
    "plotly-express==0.4.1",
    "pluggy==1.5.0",
    "primp==0.15.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.2.1",
    "protobuf==6.30.2",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.9.1",
    "pyee==12.1.1",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "pytest==8.3.5",
    "pytest-base-url==2.1.0",
    "pytest-playwright==0.7.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "referencing==0.36.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rpds-py==0.22.3",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "selectolax==0.3.28",
    "setuptools==75.8.0",
    "six==1.17.0",
    "slack-sdk==3.34.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.37",
    "sse-starlette==2.3.5",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "statsmodels==0.14.4",
    "tenacity==8.5.0",
    "text-unidecode==1.3",
    "tiktoken==0.8.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-requests==2.32.0.20250306",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.2",
    "wcwidth==0.2.13",
    "wikipedia==1.4.0",
    "wikipedia-api==0.8.1",
    "yarl==1.18.3",
]
